tests/fail/19_char_unclosed.lang
функция main(): целое {
  символ unclosed = 'a;
  вернуть 0;
}
